file(GLOB SRC_FILES *.cc)
include_directories(../ ./)
add_library(testsrv_objs OBJECT ${SRC_FILES})
add_library(ModuleTestService MODULE $<TARGET_OBJECTS:testsrv_objs>)
add_library(StaticTestService STATIC $<TARGET_OBJECTS:testsrv_objs>)
add_library(SharedTestService SHARED $<TARGET_OBJECTS:testsrv_objs>)
set_target_properties(ModuleTestService PROPERTIES OUTPUT_NAME TestService)
set_target_properties(StaticTestService PROPERTIES OUTPUT_NAME TestService)
set_target_properties(SharedTestService PROPERTIES OUTPUT_NAME TestService)
target_link_libraries(ModuleTestService SharedLibraryIota ${IOTAGENT_LIBS})
target_link_libraries(StaticTestService StaticLibraryIota)
target_link_libraries(SharedTestService StaticLibraryIota)

install(TARGETS ModuleTestService StaticTestService SharedTestService DESTINATION lib/${CMAKE_BUILD_TYPE})
