file(GLOB SRC_FILES *.cc)
include_directories(../ ./)
add_library(ul20_objs OBJECT ${SRC_FILES})
add_library(ModuleUL20Service MODULE $<TARGET_OBJECTS:ul20_objs>)
add_library(StaticUL20Service STATIC $<TARGET_OBJECTS:ul20_objs>)
add_library(SharedUL20Service SHARED $<TARGET_OBJECTS:ul20_objs>)
set_target_properties(ModuleUL20Service PROPERTIES OUTPUT_NAME UL20Service)
set_target_properties(SharedUL20Service PROPERTIES OUTPUT_NAME UL20Service)
set_target_properties(StaticUL20Service PROPERTIES OUTPUT_NAME UL20Service)
target_link_libraries(ModuleUL20Service SharedLibraryIota ${IOTAGENT_LIBS})
target_link_libraries(StaticUL20Service StaticLibraryIota)
target_link_libraries(SharedUL20Service StaticLibraryIota)

install(TARGETS ModuleUL20Service StaticUL20Service SharedUL20Service DESTINATION lib/${CMAKE_BUILD_TYPE})
